# tp_ccplusplus_2021

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  linters.sh
generator/: data1.txt  data2.txt  number_generator.py
include/: utils.h
include/film/: film.h  films.h  queries.h
include/list_of_films/: list_of_films.h
include/string/: string.h
include/utils/: utils.h
metrics/include/: array.h
metrics/src/: array.c  main.c
src/: film.c  films.c  list_of_films.c  main.c  max.c  queries.c  string.c  utils.c
sum/cmake_consistently/: CMakeLists.txt
sum/cmake_parallel/: CMakeLists.txt
sum/src/: sum_consistently.c
sum_lib/include/: pipes.h  sum.h
sum_lib/src_consistently/: sum.c
sum_lib/src_parallel/: pipes.c  sum.c
test/: CMakeLists.txt  film.cpp  films.cpp  list_of_films.cpp  queries.cpp  string.cpp  tests.cpp
test/data/: db_1  db_2
test/data/res/: all_criteria  genre_of_films  rating_range  year_of_films
test/wrong_data/: db_2  db_3  db_4
tests/: CMakeLists.txt  array.cpp  pipes.cpp  sum.cpp
tests/data/: miss_data_1  miss_data_2
